Add admin module api and authorization policies
