# rails-api/app/controllers/admin/tasks_controller.rb
@@ -1,8 +1,8 @@
-class V1::TasksController < ApplicationController
+class Admin::TasksController < ApplicationController
   before_action :set_project, only: %i[index create]
   before_action :set_task, only: %i[show update destroy]
 
-  # GET /v1/projects/:project_id/tasks
+  # GET /admin/projects/:project_id/tasks
   def index
     @tasks = @project.tasks.paginate(page: params[:page])
 
@@ -12,26 +12,26 @@ class V1::TasksController < ApplicationController
            root: 'entries'
   end
 
-  # GET /v1/tasks/1
+  # GET /admin/tasks/1
   def show
     render json: @task
   end
 
-  # POST /v1/projects/:project_id/tasks
+  # POST /admin/projects/:project_id/tasks
   def create
-    @task = authorize @project.tasks.create!(task_params)
+    @task = @project.tasks.create!(task_params)
 
     render json: @task, status: :created, location: @task
   end
 
-  # PATCH/PUT /v1/tasks/1
+  # PATCH/PUT /admin/tasks/1
   def update
     @task.update!(task_params)
 
     render json: @task
   end
 
-  # DELETE /v1/tasks/1
+  # DELETE /admin/tasks/1
   def destroy
     @task.destroy
   end
@@ -48,6 +48,11 @@ class V1::TasksController < ApplicationController
   end
 
   def task_params
-    params.fetch(:task, {}).permit(:summary, :description, :status)
+    params.fetch(:task, {}).permit(
+      :summary,
+      :description,
+      :status,
+      :assigned_to
+    )
   end
 end
