# rails-api/app/serializers/user_serializer.rb
@@ -1,3 +1,4 @@
 class UserSerializer < ActiveModel::Serializer
-  attributes :id, :email, :first_name, :last_name, :role
+  attributes :id, :email, :first_name, :last_name
+  attribute :role, if: -> { !current_user.client? }
 end
